--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta2",
     "next": "^10.0.0",
+    "next-auth": "^3.11.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
