--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
+    "mathjs": "^9.3.0",
     "next": "^10.0.0",
     "next-auth": "^3.11.2",
     "react": "17.0.1",
